; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/conio/extr_getche.c__getche.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/conio/extr_getche.c__getche.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@char_avail = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_getche() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @char_avail, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 (...) @_getch()
  store i32 %5, i32* %1, align 4
  br label %9

6:                                                ; preds = %0
  %7 = call i32 (...) @_getch()
  %8 = call i32 @_putch(i32 %7)
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %6, %4
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @_getch(...) #1

declare dso_local i32 @_putch(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
